--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body ng-app="directoryApp">
     <div class="container">
       <div class="row">
-        <h1>UF Directory App</h1>
+        <h1 class="titleTag">UF Directory App</h1>
       </div>
       <div class="row" ng-controller="ListingsController">
         <div class="col-md-6">
@@ -18,11 +18,13 @@
 
               -->
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" placeholder="Search" ng-model="search">
+			<div>
+			</div>
           </div>
           <div class="tableWrapper">
-            <table class="table table-striped table-hover">
-              <tr>
+            <table class="table table-inverse table-hover">
+              <tr class="topTable">
                 <th>Code</th>
                 <th>Building Name</th>
                 <th></th>
@@ -34,6 +36,12 @@
                       * include a way to remove individual listings
 
                 --> 
+				
+				<tr class="bottomTable" ng-repeat="list in listings | orderBy: 'code' | filter:search" ng-click="showDetails(list)">
+					<td>{{list.code}} </td>
+					<td>{{list.name}} </td>
+					<td ng-click="deleteListing(list)"><i class="glyphicon glyphicon-trash"></i></td>
+				</tr>
             </table>
           </div>
           <!-- 
@@ -41,6 +49,17 @@
               Write an HTML form that adds new listings to the directory 
 
             -->
+			<div class="col-md-4 theForm">
+				<form ng-submit="addListing()">
+					<label class="newListHeader"> Add a New Listing: </label><br>
+					<input type="text" placeholder="Code" ng-model="newListing.newCode"/><br>
+					<input type="text" placeholder="Name" ng-model="newListing.newName"/><br>
+					<input type="text" placeholder="Latitude" ng-model="newListing.newLatitude"/><br>
+					<input type="text" placeholder="Longitude" ng-model="newListing.newLongitude"/><br>
+					<input type="text" placeholder="Address" ng-model="newListing.newAddress"/><br>
+					<input class = "btn btn-primary" type="submit" value="Add New Listing" />
+				</form>
+			</div>
         </div>
         <div class="col-md-6">
           <div class="jumbotron">
@@ -51,6 +70,22 @@
                    * consider how to use ng-click within the the table to implement this feature
 
              -->
+			 <table class="table table-striped table-hover jumboTable">
+				<tr>
+					<th>Code</th>
+					<th>Building Name</th>
+					<th>Latitude</th>
+					<th>Longitude</th>
+					<th>Address</th>
+              </tr>
+			  <tr>
+					<th>{{detailedInfo.code}}</th>
+					<th>{{detailedInfo.name}}</th>
+					<th>{{detailedInfo.coordinates.longitude}}</th>
+					<th>{{detailedInfo.coordinates.latitude}}</th>
+					<th>{{detailedInfo.address}}</th>
+              </tr>
+			</table>
           </div>
         </div>
       </div>
